# lazylog

./: Cargo.toml  Makefile  README.md
examples/: CONFIG_EXAMPLES.md  basic.rs  config.toml  config.yaml  config_advanced.rs  config_toml.rs  config_yaml.rs  json_logging.rs  rotation.rs
src/: builder.rs  config.rs  error.rs  lib.rs  rotation.rs  tracing_init.rs  writer.rs
tests/: logging_file_tests.rs
