[package]
name = "lazylog"
version = "0.1.2"
edition = "2024"
description = "A flexible logging library with file rotation and structured output"
repository = "https://github.com/lazywalker/lazylog"
license = "GPL-3.0-or-later"
keywords = ["logging", "tracing", "rotation", "file", "structured"]
categories = ["development-tools::debugging"]

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "json",
    "fmt",
] }
tracing-appender = { version = "0.2", default-features = false, optional = true }
once_cell = "1.19"
time = { version = "0.3", default-features = false, optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tempfile = "3.0"
serde_yaml = "0.9"

[features]
default = []
file = ["tracing-appender"]
ansi = ["tracing-subscriber/ansi"]
time = [
    "time/local-offset",
    "time/macros",
    "time/formatting",
    "tracing-subscriber/time",
]

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "json_logging"
path = "examples/json_logging.rs"

[[example]]
name = "rotation"
path = "examples/rotation.rs"
required-features = ["time", "file"]
